fixed light mode, changed recipe card styling for dark mode

--- a/Dishcovery/src/app/recipes-page/recipes-page.component.scss
+++ b/Dishcovery/src/app/recipes-page/recipes-page.component.scss
@@ -10,7 +10,7 @@
     margin-bottom: 2rem;
 }
 
-:root {
+:host {
     // Light mode variables
     --filter-bg: #f9f9f9;
     --filter-text: black;
