--- a/Dishcovery/src/styles.scss
+++ b/Dishcovery/src/styles.scss
@@ -42,7 +42,7 @@ button {
 
 .dark-mode .example-card {
   border-color: #cd6301;
-  background-color: #222;
+  background-color: #3d3d3d;
 }
 
 .dark-mode .profile-nav {
